--- a/style.css
+++ b/style.css
@@ -5,20 +5,23 @@ body{
 }
 p{
     font-size: 30px;
+    background-color: rgb(214, 222, 232);
+    border: aqua;
+   
 }
 .pink-color{
      color: deeppink;
 }
 img {
     width: 400px;
+    
 }
 section{
     display: flex;
+    margin: 100px;;
 
 }
-.link-button{
-    border-radius: 10;
-    background-image:linear-gradient(d);
+
 }
 .top-banner{
     background-image: url(/cornner.jpg);
@@ -28,4 +31,38 @@ h1{
 font-size: 60px;
 
 }
-                                                          
+   
+ a:link {
+     background-image: linear-gradient(deeppink,red);
+    
+    color: white;
+    padding: 13px 23px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+   
+   
+  }  
+
+   .haif-width {
+       width: 50%;
+      padding: 5%;
+   }                                              
+   .About-Me{
+       background-image: url("tp-2.png");
+       background-repeat: 0;
+   }
+   .footer{
+       text-align: center;
+       border: 10px; 
+       background-color:crimson;
+   
+
+   }
+   .footer-again{
+    background-color:crimson;
+   }
+   .food{
+       color: darkblue;
+
+   }
