--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
 p{
     font-size: 30px;
     background-color: rgb(214, 222, 232);
-    border: aqua;
+    border:2px;
    
 }
 .pink-color{
@@ -40,6 +40,7 @@ font-size: 60px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
+    border-radius: 30px;
    
    
   }  
@@ -66,3 +67,34 @@ font-size: 60px;
        color: darkblue;
 
    }
+   .shadow{
+       box-shadow:grey 5px 2px 5px 2px ;
+       padding-left: 20px;
+       margin: 20px;
+       border: 20px;
+       border-radius:15px;
+   }
+   .image{ 
+    padding-right: 10px;
+    border-radius:50px;
+
+   }
+  
+   
+   .my-recipies{
+    text-align: center;
+   display: inline-block;
+     
+   }
+   recipies-section{
+    text-align: center;
+    padding: 50px 0px;
+}
+.recipies-section h1{
+    font-size: 40px;
+}
+.recipies-section p{
+    padding-top: 20px;
+    font-size: 20px;
+}
+
