--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 body{
-    font-family: 'Archivo Black', sans-serif;
+    font-family: 'STIX Two Math', serif;
     font-size: 30px;
-    margin:0 ;
+    margin:0px ;
 }
 p{
     font-size: 30px;
-    background-color: rgb(214, 222, 232);
-    border:2px;
+    background-color:gainsboro;
+    
+    padding-left: 10px;
+    
    
 }
 .pink-color{
@@ -14,18 +16,19 @@ p{
 }
 img {
     width: 400px;
+  
     
 }
 section{
     display: flex;
-    margin: 100px;;
+    margin: 1px;
 
 }
 
 }
-.top-banner{
-    background-image: url(/cornner.jpg);
-    background-repeat: no-repeat;
+
+   
+    
 }
 h1{
 font-size: 60px;
@@ -36,7 +39,7 @@ font-size: 60px;
      background-image: linear-gradient(deeppink,red);
     
     color: white;
-    padding: 13px 23px;
+    padding: 12px 22px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -45,7 +48,7 @@ font-size: 60px;
    
   }  
 
-   .haif-width {
+   .half-width {
        width: 50%;
       padding: 5%;
    }                                              
@@ -83,7 +86,7 @@ font-size: 60px;
    
    .my-recipies{
     text-align: center;
-   display: inline-block;
+    display: block;
      
    }
    recipies-section{
@@ -98,3 +101,11 @@ font-size: 60px;
     font-size: 20px;
 }
 
+.Subscribers{
+    box-shadow: 5px 2px 5px 2px grey;
+    padding: 10px 10px 10p 10px;
+   margin-left: 150px;
+   margin-right:150px;
+   margin-top: 50px;
+   margin-bottom: 50px;
+}
